WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182033
REGRESSION (
r222961
?): sRGB images shown in WebGL are over-saturated on a wide gamut monitor
https://bugs.webkit.org/show_bug.cgi?id=182033
Summary
REGRESSION (r222961?): sRGB images shown in WebGL are over-saturated on a wid...
Dean Jackson
Reported
2018-01-23 18:15:53 PST
REGRESSION (
r222961
?): sRGB images shown in WebGL are over-saturated on a wide gamut monitor
Attachments
Patch
(5.12 KB, patch)
2018-01-23 18:23 PST
,
Dean Jackson
graouts
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-01-23 18:17:34 PST
<
rdar://problem/36377780
>
Dean Jackson
Comment 2
2018-01-23 18:23:28 PST
Created
attachment 332113
[details]
Patch
Dean Jackson
Comment 3
2018-01-24 09:15:28 PST
Committed
r227524
: <
https://trac.webkit.org/changeset/227524
>
Simon Fraser (smfr)
Comment 4
2018-01-24 13:58:03 PST
Comment on
attachment 332113
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=332113&action=review
> Source/WebCore/platform/graphics/cocoa/WebGLLayer.mm:163 > + IOSurfaceSetValue(_contentsBuffer->surface(), kIOSurfaceColorSpace, sRGBDetails.get());
This code should live in WebCore::IOSurface().
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug